fix a layout issue for color-picker

--- a/src/app/core/components/resource-chart/resource-chart-config.component.scss
+++ b/src/app/core/components/resource-chart/resource-chart-config.component.scss
@@ -13,6 +13,7 @@
 ::ng-deep .mat-tab-body-content {
   overflow: hidden;
   padding: 10px;
+  position: relative;
 }
 
 .first-dialog-item {
@@ -20,6 +21,13 @@
 }
 
 .config-tab-group {
-  height: 460px;
+  height: 480px;
   width: 680px;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS styles go here */
+  ::ng-deep .color-picker {
+    position: absolute !important;
+  }
 }
